<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/brlist"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivimage"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc" />

        <TextView
            android:id="@+id/tvdeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deadline" />

        <TextView
            android:id="@+id/idnbrbenef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_beneficiaire" />
    </LinearLayout>
</LinearLayout>