<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_dialog">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorP"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingEnd="16dp"
            android:paddingStart="6dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_close"
            android:paddingRight="16dp"
            android:paddingLeft="6dp" >

            <TextView
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blanc_c"
                android:clickable="true"
                android:focusable="true"
                android:gravity="right"
                android:text="Enregistrer"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent" />

    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile"
                android:layout_gravity="center_horizontal"
                app:civ_border_width="2dp"
                android:layout_marginTop="10dp"
                app:civ_border_color="@color/colorAccent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choose_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:text="@string/chosse_pic"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic_edit"
                android:layout_marginTop="10dp"
                android:textColor="@color/blanc_c"
                app:cornerRadius="20dp"
                app:backgroundTint="@color/grisF"
                android:layout_marginBottom="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/profile"
                android:id="@+id/nL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:hintTextColor="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:endIconMode="clear_text"
                android:labelFor="@id/nom"
                app:errorTextColor="@android:color/holo_red_dark"
                >

                <EditText
                    android:padding="5dp"
                    android:id="@+id/nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nom"
                    android:ems="8"
                    android:inputType="text"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mL"
                app:startIconDrawable="@drawable/ic_mail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:hintTextColor="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                android:labelFor="@id/mail"
                >

                <EditText
                    android:enabled="false"
                    android:padding="5dp"
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:ems="8"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tL"
                app:startIconDrawable="@drawable/ic_tel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:hintTextColor="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:endIconMode="clear_text"
                android:labelFor="@id/tel"
                app:errorTextColor="@android:color/holo_red_dark"
                >

                <EditText
                    android:padding="5dp"
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel"
                    android:ems="8"
                    android:inputType="text"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dL"
                app:startIconDrawable="@drawable/ic_calendar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:hintTextColor="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:endIconMode="clear_text"
                android:labelFor="@id/dtn"
                app:errorTextColor="@android:color/holo_red_dark"
                >

                <EditText
                    android:padding="5dp"
                    android:id="@+id/dtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dtn"
                    android:ems="8"
                    android:inputType="text"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>